<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trifonov.konstantin.trainingjournal.CalendarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="270px"
        android:background="@color/colorPrimaryDark"
        android:dividerPadding="0dp"
        android:elevation="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingTop="32dp">

            <TextView
                android:id="@+id/dayNameView1"
                style="@style/day_name_view"
                android:text="@string/monday" />

            <TextView
                android:id="@+id/dayNameView2"
                style="@style/day_name_view"
                android:text="@string/tuesday" />

            <TextView
                android:id="@+id/dayNameView3"
                style="@style/day_name_view"
                android:text="@string/wednesday" />

            <TextView
                android:id="@+id/dayNameView4"
                style="@style/day_name_view"
                android:text="@string/thursday" />

            <TextView
                android:id="@+id/dayNameVeiw5"
                style="@style/day_name_view"
                android:text="@string/friday" />

            <TextView
                android:id="@+id/dayNameVeiw6"
                style="@style/day_name_view"
                android:text="@string/saturday" />

            <TextView
                android:id="@+id/dayNameView7"
                style="@style/day_name_view"
                android:text="@string/sunday" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingTop="1dp" />

        <LinearLayout
            android:id="@+id/weekOneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dayView1"
                style="@style/day_view" />

            <TextView
                android:id="@+id/dayView2"
                style="@style/day_view" />

            <TextView
                android:id="@+id/dayView3"
                style="@style/day_view" />

            <TextView
                android:id="@+id/dayView4"
                style="@style/day_view" />

            <TextView
                android:id="@+id/dayView5"
                style="@style/day_view" />

            <TextView
                android:id="@+id/dayView6"
                style="@style/day_view" />

            <TextView
                android:id="@+id/dayView7"
                style="@style/day_view" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingTop="1dp" />

        <LinearLayout
            android:id="@+id/weekTwoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dayView8"
                style="@style/day_view" />

            <TextView
                android:id="@+id/dayView9"
                style="@style/day_view" />

            <TextView
                android:id="@+id/dayView10"
                style="@style/day_view" />

            <TextView
                android:id="@+id/dayView11"
                style="@style/day_view" />

            <TextView
                android:id="@+id/dayView12"
                style="@style/day_view" />

            <TextView
                android:id="@+id/dayVeiw13"
                style="@style/day_view" />

            <TextView
                android:id="@+id/dayView14"
                style="@style/day_view" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingTop="1dp"
            android:visibility="gone" />
    </LinearLayout>

</FrameLayout>
